--- a/css/index.css
+++ b/css/index.css
@@ -279,14 +279,14 @@ header {
         transform: scale(1.15);
         transition: .3s; }
 
-.pick-kit .pick-title h2, .half .half-title h2, .shop .shop-title h2 {
+.pick-kit .pick-title h2, .half .half-title h2, .shop .shop-title h2, .game-point h2 {
   font-size: 18px;
   color: #fff;
   background-color: #333;
   padding: 15px 30px;
   margin: 15px 0; }
 
-.pick-kit .pick-title h3, .half .half-title h3, .shop .shop-title h3 {
+.pick-kit .pick-title h3, .half .half-title h3, .shop .shop-title h3, .game-point h3 {
   color: #333;
   background-color: rgba(255, 255, 255, 0.537);
   padding: 10px 30px;
@@ -337,7 +337,7 @@ header {
       border: 3px solid #fff;
       border-radius: 40px;
       text-align-last: center;
-      padding: 10px 0;
+      padding: 3px 0;
       font-size: 18px;
       color: #333;
       cursor: pointer; }
@@ -347,7 +347,7 @@ header {
       border: 3px solid #fff;
       letter-spacing: 2px;
       border-radius: 40px;
-      padding: 10px 37.5px 10px 15px;
+      padding: 5px 37.5px 5px 15px;
       font-size: 18px; }
       .banner .search input:-moz-placeholder {
         color: #333; }
@@ -488,6 +488,9 @@ header {
       margin: 10px 0; }
       .half .half-text a:hover {
         color: #EAAF88; }
+    .half .half-text .read-more {
+      align-self: flex-end;
+      text-decoration: underline; }
     .half .half-text .half-name {
       font-family: notoSans_r;
       font-size: 18px; }
@@ -543,6 +546,69 @@ header {
     display: flex;
     justify-content: center;
     align-items: center; }
+
+.game-point {
+  height: 100vh;
+  background-color: #EAAF88;
+  margin-left: 200px;
+  box-shadow: 20px 20px #333 inset,-20px -20px #333 inset; }
+  .game-point .game-point-title {
+    height: 20vh;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start; }
+  .game-point h2 {
+    height: 40px;
+    line-height: 10px; }
+  .game-point .game-point-top {
+    width: 80%;
+    margin: auto;
+    height: 35vh;
+    border-bottom: 3px solid #fff;
+    position: relative; }
+    .game-point .game-point-top .askBox {
+      position: relative;
+      height: 35vh; }
+      .game-point .game-point-top .askBox .askBorder {
+        position: absolute;
+        right: 190px;
+        top: 50px;
+        width: 350px;
+        height: 130px; }
+      .game-point .game-point-top .askBox span {
+        position: absolute;
+        top: 110px;
+        right: 350px; }
+    .game-point .game-point-top .cat-ask {
+      position: absolute;
+      right: 50px;
+      bottom: 0;
+      max-width: 80%;
+      max-height: 80%; }
+  .game-point .game-point-bottom {
+    position: relative;
+    width: 90%;
+    margin: auto;
+    display: flex;
+    height: 45vh;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding-top: 100px;
+    padding-bottom: 20px; }
+    .game-point .game-point-bottom .people {
+      position: relative;
+      left: 40%;
+      z-index: 2;
+      width: 100px;
+      height: 105px; }
+    .game-point .game-point-bottom .option-btn {
+      align-self: flex-start; }
+    .game-point .game-point-bottom .hug {
+      position: relative;
+      right: 40%;
+      width: 50px;
+      height: 90px;
+      z-index: 1; }
 
 #loading {
   position: fixed;
