--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -63,7 +63,7 @@
             border: 3px solid #fff;
             border-radius: 40px;
             text-align-last: center;
-            padding: 10px 0;
+            padding: 3px 0;
             font-size: $font-size-h4;
             color: #333;
             cursor: pointer;
@@ -74,7 +74,7 @@
             border: 3px solid #fff;
             letter-spacing: 2px;
             border-radius: 40px;
-            padding: 10px $gap*2.5 10px $gap;
+            padding: 5px $gap*2.5 5px $gap;
             font-size: $font-size-h4;
             &:-moz-placeholder {
                 color: #333;
@@ -255,6 +255,10 @@
                 color: #EAAF88;
             }
         }
+        .read-more{
+            align-self: flex-end;
+            text-decoration: underline;
+        }
         .half-name{
             font-family: notoSans_r;
             font-size: $font-size-h4;
@@ -311,18 +315,7 @@
                 font-weight: bolder;
                 padding: $gap;
                 display: block;
-            } // &:hover:after{
-            //     position: absolute;
-            //     content: '';
-            //     bottom:0;
-            //     left: 10px;
-            //     display: block;
-            //     width: 105px;
-            //     height: 2px;
-            //     background-color: #369;
-            //     opacity: 0.7;
-            //     transition: .3s;
-            // }
+            }
         }
     }
 }
@@ -338,5 +331,84 @@
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+}
+.game-point{
+    height: 100vh;
+    background-color: #EAAF88;
+    margin-left: 200px;
+    box-shadow: 20px 20px #333 inset,-20px -20px #333 inset;
+    .game-point-title{
+        height: 20vh;
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-start;
+    }
+    h2 {
+        @extend %h2-btn;
+        height: 40px;
+        line-height: 10px;
+    }
+    h3 {
+        @extend %h3-btn;
+    }
+    .game-point-top{
+        width: 80%;
+        margin: auto;
+        height: 35vh;
+        border-bottom: 3px solid #fff;
+        position: relative;
+        .askBox{
+            position: relative;
+            height: 35vh;
+            .askBorder{
+                position: absolute;
+                right: 190px;
+                top: 50px;
+                width: 350px;
+                height: 130px;
+            }
+            span{
+                position: absolute;
+                top: 110px;
+                right: 350px;
+            }
+        }
+        
+        .cat-ask{
+            position: absolute;
+            right: 50px;
+            bottom: 0;
+            max-width: 80%;
+            max-height: 80%;
+        }
+    }
+    .game-point-bottom{
+        position: relative;
+        width: 90%;
+        margin: auto;
+        display: flex;
+        height: 45vh;
+        justify-content: space-between;
+        align-items: flex-end;
+        padding-top: 100px;
+        padding-bottom: 20px;
+        .people{
+            position: relative;
+            left: 40%;
+            z-index: 2;
+            width: 100px;
+            height: 105px;
+        }
+        .option-btn{
+            align-self: flex-start;
+        }
+        .hug{
+            position: relative;
+            right: 40%;
+            width: 50px;
+            height: 90px;
+            z-index: 1;
+        }
     }
 }
