--- a/css/index.css
+++ b/css/index.css
@@ -410,19 +410,19 @@ header {
                 display: block;
                 padding: 5px; }
       .pick-kit ul li:nth-child(odd) .cat_list_bg a .cat_list {
-        background-image: url(../images/catcat_171225_0011.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center; }
-      .pick-kit ul li:nth-child(even) .cat_list_bg a .cat_list {
         background-image: url(../images/catcat_171225_0010.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center; }
-      .pick-kit ul li:nth-child(odd) .cat_list_bg a .cat_list .bubble {
+      .pick-kit ul li:nth-child(even) .cat_list_bg a .cat_list {
+        background-image: url(../images/catcat_171225_0011.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center; }
+      .pick-kit ul li:nth-child(even) .cat_list_bg a .cat_list .bubble {
         position: relative;
         top: 50%; }
-      .pick-kit ul li:nth-child(even) .cat_list_bg a .cat_list .bubble {
+      .pick-kit ul li:nth-child(odd) .cat_list_bg a .cat_list .bubble {
         position: relative;
         top: 10%; }
   .pick-kit .arrow {
@@ -430,7 +430,7 @@ header {
     height: 60px;
     background-color: rgba(0, 0, 0, 0.411);
     position: absolute;
-    top: 40vh;
+    top: 70vh;
     z-index: 666; }
     .pick-kit .arrow img {
       width: 100%;
@@ -551,7 +551,7 @@ header {
   height: 100vh;
   background-color: #EAAF88;
   margin-left: 200px;
-  box-shadow: 20px 20px #333 inset,-20px -20px #333 inset; }
+  box-shadow: 20px 20px #333 inset, -20px -20px #333 inset; }
   .game-point .game-point-title {
     height: 20vh;
     display: flex;
@@ -565,26 +565,45 @@ header {
     margin: auto;
     height: 35vh;
     border-bottom: 3px solid #fff;
-    position: relative; }
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 60px; }
     .game-point .game-point-top .askBox {
       position: relative;
-      height: 35vh; }
-      .game-point .game-point-top .askBox .askBorder {
+      height: 30vh;
+      display: flex;
+      padding: 50px;
+      justify-content: center;
+      align-items: center;
+      border: 3px solid #fff;
+      border-radius: 20% 60% 30% 60%;
+      background-color: #EAAF88; }
+      .game-point .game-point-top .askBox:after {
+        content: '';
+        display: block;
         position: absolute;
-        right: 190px;
-        top: 50px;
-        width: 350px;
-        height: 130px; }
-      .game-point .game-point-top .askBox span {
+        width: 20px;
+        height: 20px;
+        border-radius: 60% 40% 50% 60%;
+        border: 3px solid #fff;
+        right: -40px;
+        top: 50%; }
+      .game-point .game-point-top .askBox:before {
+        content: '';
+        display: block;
         position: absolute;
-        top: 110px;
-        right: 350px; }
+        width: 13px;
+        height: 13px;
+        border-radius: 60% 40% 50% 60%;
+        border: 3px solid #fff;
+        right: -55px;
+        top: 35%; }
     .game-point .game-point-top .cat-ask {
-      position: absolute;
-      right: 50px;
-      bottom: 0;
       max-width: 80%;
-      max-height: 80%; }
+      max-height: 80%;
+      align-self: flex-end;
+      margin-left: 60px; }
   .game-point .game-point-bottom {
     position: relative;
     width: 90%;
@@ -601,7 +620,7 @@ header {
       z-index: 2;
       width: 100px;
       height: 105px; }
-    .game-point .game-point-bottom .option-btn {
+    .game-point .game-point-bottom .option-area {
       align-self: flex-start; }
     .game-point .game-point-bottom .hug {
       position: relative;
