--- a/css/index.css
+++ b/css/index.css
@@ -616,18 +616,20 @@ header {
     padding-bottom: 20px; }
     .game-point .game-point-bottom .people {
       position: relative;
-      left: 40%;
+      bottom: 20px;
       z-index: 2;
       width: 100px;
-      height: 105px; }
+      height: 105px;
+      left: 0; }
     .game-point .game-point-bottom .option-area {
       align-self: flex-start; }
     .game-point .game-point-bottom .hug {
       position: relative;
-      right: 40%;
+      bottom: 20px;
       width: 50px;
       height: 90px;
-      z-index: 1; }
+      z-index: 1;
+      right: 0; }
 
 #loading {
   position: fixed;
