--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -343,7 +343,7 @@
     margin-left: 200px;
     box-shadow: 20px 20px #333 inset, -20px -20px #333 inset;
     .game-point-title {
-        height: 20vh;
+        height: 15vh;
         display: flex;
         align-items: flex-end;
         justify-content: flex-start;
@@ -359,7 +359,7 @@
     .game-point-top {
         width: 80%;
         margin: auto;
-        height: 35vh;
+        height: 30vh;
         border-bottom: 3px solid #fff;
         position: relative;
         display: flex;
@@ -375,6 +375,7 @@
             border: 3px solid #fff;
             border-radius: 20% 60% 30% 60%;
             background-color: #EAAF88;
+            bottom: 20px;
             &:after{
                 content: '';
                 display: block;
@@ -399,9 +400,6 @@
             }
         }
         .cat-ask {
-            // position: absolute;
-            // right: 50px;
-            // bottom: 0;
             max-width: 80%;
             max-height: 80%;
             align-self: flex-end;
@@ -413,10 +411,10 @@
         width: 90%;
         margin: auto;
         display: flex;
-        height: 45vh;
+        height: 55vh;
         justify-content: space-between;
         align-items: flex-end;
-        padding-top: 100px;
+        padding-top: 40px;
         padding-bottom: 20px;
         .people {
             position: relative;
@@ -427,12 +425,14 @@
         }
         .option-area {
             align-self: flex-start;
-            height: 150px;
+            width: 30%;
+            height: 250px;
             position: relative;
         }
         .option-a-front,.option-a-backed,.option-b-front,.option-b-backed{
-            padding: 60px;
             background-color: #369;
+            width: 100%;
+            height: 100%;
             position: absolute;
             top: 0;
             left: 0;
