footer再也不用import啦 另外把麵包屑做好了可以來catSearch.html找className = 'breadcrumb'的div 耶嘿

--- a/css/footer.css
+++ b/css/footer.css
@@ -220,4 +220,26 @@ footer span {
   padding: 10px;
 }
 
+@media all and (max-width: 767px) {
+  footer {
+    margin-left: 0;
+    width: 100%;
+  }
+  footer span {
+    display: block;
+    text-align: center;
+  }
+}
+
+@media all and (max-width: 767px) {
+  footer {
+    margin-left: 0;
+    width: 100%;
+  }
+  footer span {
+    display: block;
+    text-align: center;
+  }
+}
+
 /*# sourceMappingURL=footer.css.map */
