--- a/sass/catSearch.scss
+++ b/sass/catSearch.scss
@@ -15,7 +15,8 @@
 @include navNow(1);
 body {
     background-image: url('../images/marble.jpg');
-    background-repeat: no-repeat;
+    // background-repeat: no-repeat;
+    // background-size: cover;
 }
 
 .right {
@@ -29,7 +30,7 @@ body {
         a {
             text-decoration: none;
         }
-        h1 {
+        h2 {
             text-align: center;
             font-size: $font-size-h1;
             margin-top: 10px;
@@ -50,7 +51,7 @@ body {
             text-align: center;
             .advanceSearch {
                 position: absolute;
-                right: 0;
+                right: 64px;
                 top: 50px;
                 cursor: pointer;
             }
@@ -189,27 +190,13 @@ body {
             width: 100%;
             margin: 60px auto 0;
             position: relative;
-            .sort {
+            #sortCat{
+                position: absolute;
+                top: -46px;
+                left: 30px;
+                border:solid #333 1px;
+                background-color: #fffffb;
                 text-align: center;
-                font-size: 0;
-                a {
-                    width: 200px;
-                    font-size: $font-size-base;
-                    text-align: center;
-                    line-height: 1.2em;
-                    display: inline-block;
-                    margin-bottom: 20px;
-                    letter-spacing: 4px;
-                    position: relative;
-                    .fa-angle-down {
-                        position: absolute;
-                        line-height: 1.2em;
-                        right: 20%;
-                    }
-                    &:first-child {
-                        margin-right: 10px;
-                    }
-                }
             }
             .catItem {
                 width: 300px;
@@ -272,6 +259,7 @@ body {
                     line-height: 60px;
                     background: #EAAF88;
                     opacity: 0;
+                    cursor: pointer;
                     -webkit-transition: all 0.3s ease-in-out;
                     -moz-transition: all 0.3s ease-in-out;
                     transition: all 0.3s ease-in-out;
@@ -322,4 +310,3 @@ body {
 
 @import 'respond/_catSearchSmall.scss';
 @import 'respond/_catSearchMedium.scss';
-@import 'respond/_footerSmall.scss';
