--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -10,3 +10,4 @@
 @import 'respond/_small.scss';
 @import 'respond/_medium.scss';
 @import 'respond/_desktop.scss';
+@import 'respond/_footerSmall.scss';
