--- a/sass/respond/_catSearchMedium.scss
+++ b/sass/respond/_catSearchMedium.scss
@@ -12,6 +12,9 @@
                         }
                     }
                     .catPic {
+                        #sortCat{
+                            left: 100px;
+                        }
                         .catItem {
                             width: 80%;
                             display: block;
