--- a/css/signUp.css
+++ b/css/signUp.css
@@ -220,6 +220,17 @@ footer span {
   padding: 10px;
 }
 
+@media all and (max-width: 767px) {
+  footer {
+    margin-left: 0;
+    width: 100%;
+  }
+  footer span {
+    display: block;
+    text-align: center;
+  }
+}
+
 header {
   background-color: #eaaf88;
   width: 200px;
@@ -431,7 +442,7 @@ header ul li:nth-child(5):after {
 }
 
 .right .content .memOrderlist form {
-  width: 60%;
+  width: 100%;
   margin: 30px auto;
   font-size: 14px;
 }
