--- a/sass/base/_btn.scss
+++ b/sass/base/_btn.scss
@@ -1,3 +1,4 @@
+@import '../mixins/_rwd.scss';
 .defaultBtn {
     font-size: 16px;
     border: #333 2px solid;
@@ -13,7 +14,8 @@
         border-color: #EAAF88;
     }
 }
-.btn-more{
+
+.btn-more {
     width: 160px;
     text-align: center;
     height: 40px;
@@ -25,10 +27,10 @@
     overflow: hidden;
     z-index: 2;
     font-family: notoSans_r;
-    &:hover{
+    &:hover {
         color: #fff;
     }
-    &:before{
+    &:before {
         width: 100%;
         height: 100%;
         display: inline-block;
@@ -39,11 +41,11 @@
         transition: .3s;
         z-index: -1;
     }
-    &:hover:before{
+    &:hover:before {
         left: 0;
         background-color: #333;
     }
-    &:after{
+    &:after {
         margin-top: -7px;
         width: 7px;
         height: 13px;
@@ -52,5 +54,34 @@
         top: 50%;
         right: 18px;
         content: "";
+    }
+}
+
+.breadcrumbs {
+    margin-bottom: 40px;
+    font-size: $font-size-large;
+    a {
+        font-size: $font-size-base;
+        text-decoration: none;
+        border-width: 1px;
+        padding: 4px 10px;
+        text-align: center;
+    }
+}
+
+@include respond-to(small) {
+    .breadcrumbs {
+        margin-top: 40px;
+        margin-bottom: 40px;
+        text-align: center;
+        a {
+            border:none;
+            padding: 0;
+            &:hover {
+                color: #333;
+                background-color: transparent;
+                border-color: transparent;
+            }
+        }
     }
 }
