--- a/css/footer.css
+++ b/css/footer.css
@@ -220,6 +220,13 @@ footer span {
   padding: 10px;
 }
 
+@media all and (min-width: 768px) and (max-width: 991px) {
+  footer {
+    margin-left: 0;
+    width: 100%;
+  }
+}
+
 @media all and (max-width: 767px) {
   footer {
     margin-left: 0;
@@ -228,6 +235,13 @@ footer span {
   footer span {
     display: block;
     text-align: center;
+  }
+}
+
+@media all and (min-width: 768px) and (max-width: 991px) {
+  footer {
+    margin-left: 0;
+    width: 100%;
   }
 }
 
