--- a/css/catContent.css
+++ b/css/catContent.css
@@ -220,6 +220,13 @@ footer span {
   padding: 10px;
 }
 
+@media all and (min-width: 768px) and (max-width: 991px) {
+  footer {
+    margin-left: 0;
+    width: 100%;
+  }
+}
+
 @media all and (max-width: 767px) {
   footer {
     margin-left: 0;
@@ -939,17 +946,6 @@ header ul li:nth-child(1):after {
   footer {
     margin-left: 0;
     width: 100%;
-  }
-}
-
-@media all and (max-width: 767px) {
-  footer {
-    margin-left: 0;
-    width: 100%;
-  }
-  footer span {
-    display: block;
-    text-align: center;
   }
 }
 
