--- a/css/member.css
+++ b/css/member.css
@@ -221,6 +221,13 @@ footer span {
   padding: 10px;
 }
 
+@media all and (min-width: 768px) and (max-width: 991px) {
+  footer {
+    margin-left: 0;
+    width: 100%;
+  }
+}
+
 @media all and (max-width: 767px) {
   footer {
     margin-left: 0;
