--- a/css/halfway_house_search.css
+++ b/css/halfway_house_search.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ 
 v2.0 | 20110126
 License: none (public domain)
@@ -80,6 +79,99 @@ body {
 
 .fa-venus {
   color: #fc516d;
+}
+
+.defaultBtn {
+  font-size: 16px;
+  border: #333 2px solid;
+  border-radius: 24px;
+  color: #333;
+  padding: 4px 30px;
+  background-color: transparent;
+  cursor: pointer;
+  transition: .3s all;
+}
+
+.defaultBtn:hover {
+  color: white;
+  background-color: #EAAF88;
+  border-color: #EAAF88;
+}
+
+.btn-more {
+  width: 160px;
+  text-align: center;
+  height: 40px;
+  line-height: 40px;
+  background-color: #fff;
+  text-decoration: none;
+  color: #333;
+  position: relative;
+  overflow: hidden;
+  z-index: 2;
+  font-family: notoSans_r;
+}
+
+.btn-more:hover {
+  color: #fff;
+}
+
+.btn-more:before {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  content: '';
+  position: absolute;
+  left: -100%;
+  background-color: transparent;
+  transition: .3s;
+  z-index: -1;
+}
+
+.btn-more:hover:before {
+  left: 0;
+  background-color: #333;
+}
+
+.btn-more:after {
+  margin-top: -7px;
+  width: 7px;
+  height: 13px;
+  background: url(../images/icon01.png) no-repeat right center;
+  position: absolute;
+  top: 50%;
+  right: 18px;
+  content: "";
+}
+
+.breadcrumbs {
+  margin-bottom: 40px;
+  font-size: 18px;
+}
+
+.breadcrumbs a {
+  font-size: 14px;
+  text-decoration: none;
+  border-width: 1px;
+  padding: 4px 10px;
+  text-align: center;
+}
+
+@media all and (max-width: 767px) {
+  .breadcrumbs {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    text-align: center;
+  }
+  .breadcrumbs a {
+    border: none;
+    padding: 0;
+  }
+  .breadcrumbs a:hover {
+    color: #333;
+    background-color: transparent;
+    border-color: transparent;
+  }
 }
 
 .container {
@@ -371,304 +463,85 @@ header ul li:nth-child(2):after {
   z-index: 0;
 }
 
-.right .searchsection {
-  padding: 50px;
-  width: 70%;
-  margin: auto;
-  background-color: #FEF2E6;
-  box-shadow: 12px 10px 20px -10px #333;
-  position: relative;
-  top: 0;
-  left: 0;
-  z-index: 0;
-}
-
-.right .searchsection .flycat {
-  width: 160px;
-  position: absolute;
-  top: 60%;
-  left: 70%;
-}
-
-.right .searchsection .dropholder {
-  width: 322px;
-  height: 60px;
-  margin: 80px auto 250px auto;
-  padding: 0 0 0 20px;
-  border-radius: 60px;
-  font: 18px arial;
-  color: #333;
-  position: relative;
-  box-sizing: border-box;
-  border: 2px solid #333;
-  animation: move 3s ease-in-out infinite;
-  position: relative;
-}
-
-.right .searchsection .dropholder:after {
-  content: "";
-  position: absolute;
-  width: 250px;
-  height: 5px;
-  background: transparent;
-  display: block;
-  top: 250px;
-  left: 37px;
-  margin: auto;
-  border-radius: 50%;
-  box-shadow: 0 15px 10px rgba(0, 0, 0, 0.4);
-  animation: moveShadow 3s ease-in-out infinite;
-}
-
-.right .searchsection .dropholder p {
-  float: left;
-  line-height: 60px;
-  font-size: 14px;
-}
-
-.right .searchsection .dropholder:hover,
-.right .searchsection .dropholder:hover:after {
-  animation-play-state: paused;
-}
-
-.right .searchsection .dropdown > p {
-  font-size: 14px;
-}
-
-.right .searchsection .dropdown,
-.right .searchsection .dropholder {
-  background-color: transparent;
-}
-
-.right .searchsection .dropdown {
-  margin-left: 20px;
-  float: left;
-  width: 221px;
-  padding: 0 0 0 20px;
-  border-radius: 0 60px 60px 0;
-  cursor: pointer;
-  height: 57px;
-  border-left: 2px solid #333;
-  position: relative;
-}
-
-.right .searchsection .dropdown:hover {
-  background-color: rgba(253, 222, 191, 0.9);
-  color: #333;
-}
-
-.right .searchsection .dropdown:after {
-  content: "▾";
-  font-size: 18px;
-  position: absolute;
-  right: 20px;
-  top: 18px;
-  display: block;
-}
-
-.right .searchsection .menu {
-  position: absolute;
-  right: 20px;
-  top: 70px;
-  width: 200px;
-  cursor: pointer;
-  opacity: 0;
-  transform-style: preserve-3d;
-  transform: rotatey(100deg) rotateX(5deg);
-  backface-visibility: hidden;
-  background-color: transparent;
-  border: 2px solid #333;
-  border-radius: 5px;
-  transition: all 0.8s;
-  z-index: 5;
-  overflow: hidden;
-}
-
-.right .searchsection .menu li {
-  padding: 10px 10px;
-  color: #333;
-  transition: all 0.3s;
-}
-
-.right .searchsection .menu li:hover {
-  background-color: rgba(253, 222, 191, 0.9);
-  color: #333;
-  padding-left: 20px;
-}
-
-.right .searchsection .menu li:last-child {
-  border: none;
-}
-
-.right .searchsection .showMenu {
-  opacity: 1;
-  transform: rotateX(0deg) translatey(0px);
-}
-
-.right .searchsection li > i {
-  float: left;
-  padding-top: 3px;
-  padding-right: 8px;
-}
-
-.right .searchsection p > i {
-  position: relative;
-  top: 2px;
-}
-
-.right .searchsection i {
-  opacity: 0.7;
-}
-
-@keyframes move {
-  0%,
-  100% {
-    transform: translateY(-10px);
-  }
-  50% {
-    transform: translateY(0);
-  }
-}
-
-@keyframes moveShadow {
-  0%,
-  100% {
-    transform: translateY(10px);
-    opacity: 0.4;
-  }
-  50% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-.right .searchsection #content {
-  position: relative;
-  z-index: 999;
-  height: 40px;
-  width: 300px;
-  top: 60%;
-  left: 70%;
-}
-
-.right .searchsection #content.on {
-  animation-name: in-out;
-  animation-duration: 0.7s;
-  animation-timing-function: linear;
-  animation-iteration-count: 1;
-}
-
-.right .searchsection input {
-  box-sizing: border-box;
-  width: 50px;
-  height: 50px;
-  border: 4px solid #333;
-  border-radius: 50%;
-  background: none;
-  color: #333;
-  font-size: 14px;
-  font-weight: 400;
-  outline: none;
-  transition: width 0.4s ease-in-out, border-radius 0.8s ease-in-out, padding 0.2s;
-  transition-delay: 0.4s;
-  transform: translate(-100%, -50%);
-}
-
-.right .searchsection .search {
-  background: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 50px;
-  width: 50px;
-  padding: 0;
-  border-radius: 100%;
-  outline: 0;
-  border: 0;
-  color: inherit;
-  cursor: pointer;
-  transition: 0.2s ease-in-out;
-  transform: translate(-100%, -50%);
-}
-
-.right .searchsection .search:before {
-  content: "";
-  position: absolute;
-  width: 20px;
-  height: 4px;
-  background-color: #333;
-  transform: rotate(45deg);
-  margin-top: 26px;
-  margin-left: 17px;
-  transition: 0.2s ease-in-out;
-}
-
-.right .searchsection .close {
-  transition: 0.4s ease-in-out;
-  transition-delay: 0.4s;
-}
-
-.right .searchsection .close:before {
-  content: "";
-  position: absolute;
-  width: 27px;
-  height: 4px;
-  margin-top: -1px;
-  margin-left: -13px;
-  background-color: #333;
-  transform: rotate(45deg);
-  transition: 0.2s ease-in-out;
-}
-
-.right .searchsection .close:after {
-  content: "";
-  position: absolute;
-  width: 27px;
-  height: 4px;
-  background-color: #333;
-  margin-top: -1px;
-  margin-left: -13px;
-  cursor: pointer;
-  transform: rotate(-45deg);
-}
-
-.right .searchsection .square {
-  box-sizing: border-box;
-  padding: 0 40px 0 10px;
-  width: 350px;
-  height: 50px;
-  border-radius: 40px;
-  border: 2px solid #333;
-  background: none;
-  color: #333;
-  font-family: Roboto;
-  font-size: 14px;
-  font-weight: 400;
-  outline: 0;
-  transition: width 0.4s ease-in-out, border-radius 0.4s ease-in-out, padding 0.2s;
-  transition-delay: 0.4s, 0s, 0.4s;
-  transform: translate(-100%, -50%);
-}
-
-.right #selectBox {
-  display: none;
-}
-
 .right h2 {
-  font-size: 30px;
+  font-size: 36px;
   text-align: center;
   padding: 50px 0;
   letter-spacing: 15px;
   font-weight: bold;
 }
 
-.right .item {
-  width: 70%;
-  margin: 100px auto 200px 15%;
+.right .searchsection {
+  margin: 40px 0;
+}
+
+.right .searchsection .formInsert {
+  text-align: center;
+}
+
+.right .searchsection .formInsert .select:hover {
+  color: #000;
+  background-color: #fff;
+  border-color: #000;
+}
+
+.right .searchsection .formInsert .searchBtn {
+  height: 38px;
+}
+
+.right .searchsection .formInsert .searchBar {
+  width: 260px;
+  height: 38px;
+  border-radius: 100px;
+  border: 2px solid black;
+  font-size: 14px;
+  text-indent: 4px;
+  margin-right: 6px;
+}
+
+.right .searchsection .formInsert .searchBar:focus {
+  outline: none;
+}
+
+.right .searchsection .formInsert .searchBar:-ms-input-placeholder {
+  font-size: 14px;
+  line-height: 30px;
+  letter-spacing: 4px;
+  padding: 5px 15px;
+}
+
+.right .searchsection .formInsert .searchBar:-moz-placeholder {
+  font-size: 14px;
+  line-height: 30px;
+  letter-spacing: 4px;
+  padding: 5px 15px;
+}
+
+.right .searchsection .formInsert .searchBar::-moz-placeholder {
+  font-size: 14px;
+  line-height: 30px;
+  letter-spacing: 4px;
+  padding: 5px 15px;
+}
+
+.right .searchsection .formInsert .searchBar::-webkit-input-placeholder {
+  font-size: 14px;
+  line-height: 30px;
+  letter-spacing: 4px;
+  padding: 5px 15px;
+}
+
+.right #selectBox {
+  display: none;
+}
+
+.right .result .item {
+  width: 100%;
+  margin: 200px auto 150px auto;
   position: relative;
 }
 
-.right .item .text {
+.right .result .item .text {
   width: 50%;
   background-color: #fff;
   font-size: 14px;
@@ -677,13 +550,13 @@ header ul li:nth-child(2):after {
   box-shadow: 12px 10px 20px -10px #333;
 }
 
-.right .item .text h3 {
+.right .result .item .text h3 {
   font-size: 24px;
   padding: 8% 0;
   letter-spacing: 10px;
 }
 
-.right .item .text a {
+.right .result .item .text a {
   display: flex;
   justify-content: flex-end;
   margin-right: 25px;
@@ -691,22 +564,22 @@ header ul li:nth-child(2):after {
   color: #EAAF88;
 }
 
-.right .item .text a:hover {
+.right .result .item .text a:hover {
   color: #333;
 }
 
-.right .item .pic {
+.right .result .item .pic {
   position: absolute;
-  top: -15px;
-  left: 48%;
+  top: -40px;
+  left: 50%;
   box-shadow: 12px 10px 20px -10px #333;
 }
 
-.right .item .pic img {
+.right .result .item .pic img {
   width: 100%;
 }
 
-.right .item .bg {
+.right .result .item .bg {
   position: absolute;
   top: 13%;
   left: 5%;
@@ -716,15 +589,15 @@ header ul li:nth-child(2):after {
   z-index: -3;
 }
 
-.right .item .bg1 {
+.right .result .item .bg1 {
   background-color: rgba(66, 136, 115, 0.767);
 }
 
-.right .item .bg2 {
+.right .result .item .bg2 {
   background-color: rgba(199, 79, 73, 0.767);
 }
 
-.right .item .bg3 {
+.right .result .item .bg3 {
   background-color: rgba(139, 105, 73, 0.767);
 }
 
