--- a/sass/halfway_house_search.scss
+++ b/sass/halfway_house_search.scss
@@ -2,7 +2,8 @@
 @import 'base/_var.scss';
 @import 'base/_boxsizing.scss';
 @import 'base/_font.scss';
-@import "base/genderIcon";
+@import "base/_genderIcon";
+@import "base/_btn.scss";
 @import 'layout/_container.scss';
 @import 'mixins/_rwd.scss';
 @import 'mixins/_clearfloat.scss';
