--- a/css/signUp.css
+++ b/css/signUp.css
@@ -481,7 +481,6 @@ header ul li:nth-child(5):after {
   height: 100vh;
   position: fixed;
   z-index: 1000;
-  display: none;
 }
 
 .signUpLightbox {
@@ -489,7 +488,6 @@ header ul li:nth-child(5):after {
   height: 600px;
   z-index: 1001;
   position: fixed;
-  display: none;
 }
 
 .signUpLightbox .cancel {
@@ -550,7 +548,7 @@ header ul li:nth-child(5):after {
 }
 
 .signUpLightbox .formShape form {
-  padding: 50px;
+  padding: 10px 50px;
   margin: 0 auto;
   color: #fff;
   font-family: '../fonts/NotoSansCJKtc-Thin.otf';
