--- a/sass/signUp.scss
+++ b/sass/signUp.scss
@@ -75,7 +75,7 @@ $colorPlaceholder: hsla(0, 0%, 96%, 0.7);
             }
         }
         form {
-            padding: 50px;
+            padding: 10px 50px;
             margin: 0 auto;
             color: #fff;
             font-family: '../fonts/NotoSansCJKtc-Thin.otf';
